--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main">
-									<img src="IMG_5597.jpg" alt="" style="width: 200px; height: 250px" />  <!-- Adjust the width as needed -->
+									<img src="yerroju.jpg" alt="" style="width: 200px; height: 250px" />  <!-- Adjust the width as needed -->
 								</span>
 								<p>As a passionate and driven Computer Engineering graduate student at Wright State University, I am excited to share my journey and experiences that have shaped my academic and professional aspirations. My educational background began with a Bachelor’s in Electronics and Communication Engineering from Rajamahendri Institute of Engineering and Technology in India, where I developed a solid foundation in technology and engineering principles.
 								</p><p>
@@ -66,12 +66,12 @@
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="img2.jpeg" alt="" /></span>
-								<p>GAN DEFENSE MECHANISM: </p>
-								<p>Developed a defense mechanism using Generative Adversarial Networks (GANs) to combat adversarial attacks, specifically employing the Fast Gradient Sign Method (FGSM) on the CIFAR-10 dataset. Implemented the GAN architecture in Python with PyTorch and TensorFlow, enhancing model robustness. Evaluated accuracy improvements in a classifier against adversarial examples, demonstrating the effectiveness of GANs in mitigating adversarial effects.</p><p>
-									ARCHITECTURAL MODEL OF A BUS STOP WITH AUTOMATIC SUNSHADE:</p><p>
+								<p> <a href="https://github.com/JahnaviYerroju/GAN">GAN Defense Mechanism:</a><br> Developed a defense mechanism using Generative Adversarial Networks (GANs) to combat adversarial attacks, specifically employing the Fast Gradient Sign Method (FGSM) on the CIFAR-10 dataset. Implemented the GAN architecture in Python with PyTorch and TensorFlow, enhancing model robustness. Evaluated accuracy improvements in a classifier against adversarial examples, demonstrating the effectiveness of GANs in mitigating adversarial effects.
+								</p><p>
+									<a href= "https://github.com/JahnaviYerroju/ARCHITECTURAL-MODEL-OF-BUS-STOP">ARCHITECTURAL MODEL OF A BUS STOP WITH AUTOMATIC SUNSHADE:</a> <br>
 									The architectural model of a bus stop with
 									automatic sunshade is a new generation bus stop. Here the roof moves with respect to sun direction, and expands during rains. This will make the comfortable bus stop of passengers without any climatic problems. The automatic lights are installed so people can use bus stop during nights without any fear. This model satisfies the modern technology.
-								</p><p> MANHOLE MONITORING WITH FAULT DETECTION AND REPORTING SYSTEM:</p><p>
+								</p><p> MANHOLE MONITORING WITH FAULT DETECTION AND REPORTING SYSTEM:<br>
 									A smart city is the future goal to have cleaner and
 									better amenities for the society. Smart underground infrastructure is an important feature to be considered while implementing a smart city. Drainage system monitoring plays a vital role in keeping the city clean and healthy. Since manual monitoring is incompetent, this leads to slow handling of problems in drainage and consumes more time to solve.</p>
 							</article>
@@ -91,31 +91,36 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<h3>Address</h3>
+								<p>1701 Ironwood Dr, Fairborn, OH, 45324</p>
+								<h3>Mobile</h3>
+								<p>614-434 7860</p>
+								<h3>Mail</h3>
+								<p>jahnaviy2001@gmail.com</p>
+								<!--
+								<form method="post" action="send_message.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="name" required />
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="email" required />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
+											<textarea name="message" id="message" rows="4" required></textarea>
 										</div>
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+									<button type="submit">Send Message</button>
+								</form>--> 
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+									<li><a href="http://linkedin.com/in/jahnavipushpalatha2001yerroju" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.instagram.com/jaanu_yerroju/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/JahnaviYerroju" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -177,10 +182,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+										<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+										<li><a href="https://www.instagram.com/jaanu_yerroju/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/JahnaviYerroju" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
@@ -315,11 +320,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jahnavi Yerroju" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jahnaviy2001@gmail.com" />
 											</div>
 											<div class="field">
 												<label for="demo-category">Category</label>
@@ -365,7 +370,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Jahnavi Yerroju: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Jahnavi Yerroju <a href=""></a></p>
 					</footer>
 
 			</div>
